fix(front) : padding and alignements

--- a/packages/scss/src/components/indexTable/component.scss
+++ b/packages/scss/src/components/indexTable/component.scss
@@ -57,6 +57,9 @@
         .indexTable-head-row-transparentCell,
         .indexTable-body-row-transparentCell {
             padding: var(--spacings-XXS) 0;
+            &:not(:first-child) {
+                padding-right: var(--components-indexTable-cell-padding);
+            }
         }
 
         .indexTable-head-row-cell,
